# Airvent-codex

./: .gitignore  Anchor.toml  README.md  air_quality_validator.py  sample_data.jsonl  start-demo.sh  vercel.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yml
app/components/: SubscriptionCard.tsx
app/idl/: airvent_subscription.ts
app/solana/: provider.ts  subscription.ts
dashboard/: .env  .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  auth.ts  main.tsx
dashboard/src/components/: AiVerificationPanel.tsx  Alerts.tsx  Badge.tsx  Charts.tsx  Container.tsx  DashboardLayout.tsx  KpiCards.tsx  MiningCard.tsx  ProductSpecs.tsx  RawTable.tsx  RequireAuth.tsx  SubscriptionCard.tsx  WalletErrorBoundary.tsx
dashboard/src/config/: thresholds.ts
dashboard/src/i18n/: config.ts
dashboard/src/i18n/locales/: en.json  ko.json
dashboard/src/idl/: airvent_subscription.ts
dashboard/src/lib/: supabaseClient.ts
dashboard/src/mock/: airquality.ts
dashboard/src/pages/: DashboardPage.tsx  JudgeDemo.tsx  LandingPage.tsx  LoginPage.tsx
dashboard/src/pages/dashboard/: AirQualityTab.tsx  OverviewTab.tsx  (+3 more)
dashboard/src/solana/: WalletContextProvider.tsx  provider.ts  subscription.ts
dashboard/src/types/: air.ts
dashboard/src/utils/: format.ts  stripe.ts
migrations/: deploy.ts
programs/airvent_subscription/: Cargo.toml
programs/airvent_subscription/src/: lib.rs
public/: index.html
scripts/: deploy-devnet.sh  deploy-testnet.ps1  deploy-testnet.sh
